# algorepo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/algorepo/: cli.py  exceptions.py  main.py  models.py  renderer.py
src/algorepo/config/: __init__.py  config.py
src/algorepo/languages/: __init__.py  languages.py  snippets.py
src/algorepo/templates/: C#.cs  C++.cpp  C.c  Go.go  Java.java  Kotlin.kt  PHP.php  Ruby.rb  Rust.rs  Scala.scala  Swift.swift  TypeScript.ts  default.txt
src/algorepo/testers/runners/: __init__.py  base.py  c.py  cpp.py  csharp.py  go.py  java.py  javascript.py  kotlin.py  python.py  rust.py  typescript.py
src/algorepo/testers/templates/leetcode/c/: lc.h
src/algorepo/testers/templates/leetcode/cpp/: lc.hpp
src/algorepo/testers/templates/leetcode/go/: lc.go
src/algorepo/testers/templates/leetcode/javascript/: lc.js
src/algorepo/testers/templates/leetcode/python/: lc.py
src/algorepo/utils/: __init__.py  aggregator.py  agregator.py  formatter.py  loader.py  renderer.py  tester.py  validator.py  workspace.py
tests/: test_aggregator.py  test_cli.py  test_codewars.py  test_config.py  test_exceptions.py  test_formatter.py  test_languages.py  test_main.py  test_model.py  test_platforms.py  test_renderer.py  test_tester.py  test_validator.py
tests/fixtures/: codewars_challenge.json  leetcode_two_sum.json
