[project]
name = "algorepo"
version = "0.1.1"
description = "CLI utility for parsing and managing algorithmic problems from platforms like LeetCode and CodeWars"
readme = "README.md"
authors = [{name = "algorepo authors"}]
license = {text = "MIT"}
keywords = ["leetcode", "codewars", "cli", "algorithms", "dsa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/elsmirroad/algorepo"
Repository = "https://github.com/elsmirroad/algorepo"
Issues = "https://github.com/elsmirroad/algorepo/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "pyright>=1.1",
]

[project.scripts]
algorepo = "algorepo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/algorepo/templates/*" = ["ALL"]
"src/algorepo/testers/templates/*" = ["ALL"]
"tests/*" = ["F401", "F841"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = [
    "src/algorepo/templates/**",
    "src/algorepo/testers/templates/**",
    "**/__pycache__",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.0",
    "pytest-mock>=3.15.1",
]
